--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "bootstrap": "^5.1.0",
+    "firebase": "^8.9.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-firebaseui": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
